fix: z-index fix for drawer

--- a/components/Navigation/Navigation.css
+++ b/components/Navigation/Navigation.css
@@ -134,6 +134,7 @@
   display: flex;
   flex-direction: column;
   gap: var(--drawer-padding);
+  z-index: 10;
 }
 
 .drawer--on {
